--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "serve-favicon": "~2.1.3",
     "debug": "~2.0.0",
     "jade": "~1.6.0",
-    "pegjs": "~0.8.0"
+    "pegjs": "~0.8.0",
+    "underscore": "1.7.0"
   }
 }
