--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "dd5gen",
-  "version": "0.0.0",
+  "name": "js-class-diagrams",
+  "version": "0.0.1",
   "private": true,
   "scripts": {
     "start": "node ./bin/www"
@@ -10,9 +10,15 @@
     "chai": "1.9.x",
     "coffee-script": "1.8.0",
     "grunt": "0.4.x",
+    "grunt-contrib-sass": "0.7.x",
+    "grunt-contrib-coffee": "0.6.x",
+    "grunt-contrib-uglify": "0.2.x",
+    "grunt-contrib-copy": "0.4.x",
     "grunt-contrib-watch": "0.6.x",
+    "grunt-contrib-connect": "0.2.x",
     "grunt-mocha-test": "0.12.x",
-    "grunt-shell": "1.1.x"
+    "grunt-shell": "1.1.x",
+    "connect-livereload": "0.5.x"
   },
   "dependencies": {
     "express": "~4.9.0",
