--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "chai": "1.9.x",
     "coffee-script": "1.8.0",
     "grunt": "0.4.x",
+    "grunt-contrib-clean": "0.6.x",
     "grunt-contrib-sass": "0.7.x",
     "grunt-contrib-coffee": "0.6.x",
     "grunt-contrib-uglify": "0.2.x",
