--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "debug": "~2.0.0",
     "jade": "~1.6.0",
     "pegjs": "~0.8.0",
-    "underscore": "1.7.0"
+    "underscore": "1.7.0",
+    "backbone": "1.1.x"
   }
 }
